@@ -1,14 +1,9 @@
 package onboarding;
 
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.TreeMap;
 
 public class Problem6 {
-	public static List<String> solution(List<List<String>> forms) {
-		List<String> answer = Collections.emptyList();
-        
-        return answer; 
-}
-}
+    public static List<String> solution(List<List<String>> forms) {
+        List<String> answer = List.of("answer");
+        return answer;
+    }
